<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:text="@string/text_producto"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="25dp"
        android:ems="9"
        android:textSize="18sp"
        android:hint="@string/text_nombreproducto"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="95dp"
        android:text="@string/text_categoria"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/textViewCt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="85dp"
        android:ems="9"
        android:textSize="18sp"
        android:hint="@string/textview_categoria"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="155dp"
        android:text="@string/text_cantidad"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/textViewCan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="145dp"
        android:ems="9"
        android:textSize="18sp"
        android:hint="@string/textview_cantidad"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="215dp"
        android:text="@string/text_precio"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="215dp"
        android:text="@string/textview_simbolo"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/textViewPrec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="205dp"
        android:ems="9"
        android:textSize="18sp"
        android:hint="@string/textview_precio"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="275dp"
        android:text="@string/text_codigo"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewCo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="275dp"
        android:ems="9"
        android:textSize="18sp"
        android:hint="@string/textview_codigo"/>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:text="@string/button_consultar"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="410dp">

    <Button
        android:id="@+id/buttonAct"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:text="@string/button_actualiza"
        android:textStyle="bold"
        android:textSize="16sp"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/buttonEl"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_weight="2"
        android:text="@string/button_eliminar"
        android:textStyle="bold"
        android:textSize="16sp"
        style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</RelativeLayout>