<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nombre"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1.5"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_nombre"
            android:textSize="20sp"
            android:layout_weight=".8"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_codigo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1.5"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_codigo"
            android:textSize="20sp"
            android:layout_weight=".8"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_categoria"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1.5"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txtCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_categoria"
            android:textSize="20sp"
            android:layout_weight=".8"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_cantidad"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1.5"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_cantidad"
            android:textSize="20sp"
            android:layout_weight=".8"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_precio"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1.455"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_simbolo"
            android:textSize="20sp"
            android:layout_weight="2"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview_precio"
            android:textSize="20sp"
            android:layout_weight="1"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

</LinearLayout>